Fix table layout break on small screens

--- a/src/features/collection/CollectionTable/CollectionTable.module.scss
+++ b/src/features/collection/CollectionTable/CollectionTable.module.scss
@@ -5,10 +5,12 @@
   text-align: center;
   border-collapse: separate;
   width: 100%;
+  min-width: max-content;
 }
 
 .wrapper {
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  overflow-x: auto;
 }
