--- a/src/features/columns/CollectionHeadItem/CollectionHeadItem.module.scss
+++ b/src/features/columns/CollectionHeadItem/CollectionHeadItem.module.scss
@@ -1,3 +1,5 @@
+$mobile-breakpoint: 768px;
+
 .item {
   margin: auto;
   padding: 0.5rem 0;
@@ -9,11 +11,17 @@
   align-items: center;
   gap: 0.5rem;
   min-width: 150px;
+  @media (max-width: $mobile-breakpoint) {
+    min-width: 100px;
+  }
 }
 .input {
   height: 1.5rem;
   padding: 0;
   width: 150px;
+  @media (max-width: $mobile-breakpoint) {
+    width: 100px;
+  }
 }
 
 .selected {
@@ -32,6 +40,9 @@
   width: fit-content;
   &:hover {
     background-color: var(--secondary-color);
+  }
+  @media (max-width: $mobile-breakpoint) {
+    min-width: 100px;
   }
 }
 
